[gd_scene load_steps=2 format=3 uid="uid://cg27ms6ssvsjx"]

[ext_resource type="Script" path="res://MultiplayerControl.gd" id="1_fdon7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fdon7")

[node name="host" type="Button" parent="."]
layout_mode = 0
offset_left = 101.0
offset_top = 242.0
offset_right = 405.0
offset_bottom = 377.0
text = "host"

[node name="join" type="Button" parent="."]
layout_mode = 0
offset_left = 446.0
offset_top = 245.0
offset_right = 750.0
offset_bottom = 380.0
text = "join"

[node name="start" type="Button" parent="."]
layout_mode = 0
offset_left = 812.0
offset_top = 247.0
offset_right = 1116.0
offset_bottom = 382.0
text = "start"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 128.0
offset_right = 1113.0
offset_bottom = 209.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 124.0
offset_right = 278.0
offset_bottom = 219.0
text = "Name"

[connection signal="button_down" from="host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="start" to="." method="_on_start_button_down"]
